--- a/apps/lp/package.json
+++ b/apps/lp/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-postcss": "^6.8.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
+    "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "^3.3.0"
   },
   "keywords": [
